# InstapaperScraper

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  Makefile  README-transactions.md  README.md  config.toml.example  context7.json  pyproject.toml  requirements.txt  scrape-transactions.py  scrape.py  styles.css  test_scrape.py  test_scrape_error_handling.py
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/instapaper_scraper/: api.py  auth.py  cli.py  constants.py  output.py
tests/: test_api.py  test_api_folders.py  test_auth.py  test_cli.py  test_cli_config_flags.py  test_cli_folders.py  test_cli_priority.py  test_init.py  test_output.py
