[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "instapaper-scraper"
version = "1.3.1rc1"
description = "A tool to scrape articles from Instapaper."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
license-files = ["LICEN[CS]E*"]
dependencies = [
    "beautifulsoup4~=4.14.2",
    "certifi>=2025.11.12,<2026.5.0",
    "charset-normalizer~=3.4.3",
    "cryptography~=46.0.7",
    "guara~=0.0.14",
    "idna~=3.11",
    "python-dotenv~=1.2.1",
    "requests~=2.33.1",
    "soupsieve~=2.8",
    "typing_extensions~=4.15.0",
    "urllib3~=2.6.3",
    "tomli~=2.0.1; python_version < '3.11'"
]

[project.urls]
Homepage = "https://github.com/chriskyfung/InstapaperScraper"
Source = "https://github.com/chriskyfung/InstapaperScraper"
Issues = "https://github.com/chriskyfung/InstapaperScraper/issues"

[project.scripts]
instapaper-scraper = "instapaper_scraper.cli:main"

[tool.licensecheck]
license = "GPL-3.0"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[project.optional-dependencies]
dev = [
    "pytest~=9.0.3",
    "pytest-cov~=7.1.0",
    "ruff~=0.15.11",
    "types-requests~=2.33.0.20260408",
    "types-beautifulsoup4~=4.12.0.20250516",
    "requests-mock~=1.12.1",
    "build~=1.4.3",
    "twine~=6.2.0",
    "mypy~=1.20.1",
    "pre-commit>=4.5.1,<4.7.0",
    "licensecheck"
]
